fixed image size on mobile

--- a/styles/post.css
+++ b/styles/post.css
@@ -39,3 +39,8 @@
   max-width: 100%;
   height: auto;
 }
+
+article img {
+  max-width: 100%;
+  height: auto;
+}
